--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-heme: jekyll-theme-slate
+heme: jekyll-theme-modernist
 title: Automatic Speech Recognition and Response with Transformer Neural Networks
 description: CS152 Neural Network Project Proposal by Justin Kim
