--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-heme: jekyll-theme-modernist
+theme: jekyll-theme-modernist
 title: asr-tnn-jarvis
 description: CS152 Neural Network Project Proposal by Justin Kim
